welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:5: error: ';' expected but 'return' found.
  } return somme/nums.length} 
    ^